1.kubernetes/24.daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: monitoring-agent
  labels:
    app: monitoring-agent
spec:
  selector:
    matchLabels:
      app: monitoring-agent
  template:
    metadata:
      labels:
        app: monitoring-agent
    spec:
      containers:
      - name: monitoring-agent
        image: nginx
        resources: {}

# Add a new node to the cluster `minikube node add --profile demo`
# add see that a new pod is created on the new node
