1.kubernetes/3.5.deployment.sidecar.yaml
  apiVersion: v1
  kind: Pod
  metadata:
    name: my-comprehensive-pod
    labels:
      app: my-app
      environment: production
    annotations:
      description: "This is a comprehensive pod example"
  spec:
    containers:
    - name: main-container
      image: nginx:latest
      ports:
      - containerPort: 80
      resources: {}
    - name: sidecar-container
      image: busybox
      command: ["sh", "-c", "echo Hello Kubernetes! && sleep 3600"]
      resources: {}
    restartPolicy: Always

# try node selector
# look at the init container when you start the pod
# get a shell and select which container to go to
# check env variables inside the main container
