1.kubernetes/3.9.deployment.serviceaccount.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-reader-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pod-reader
  template:
    metadata:
      labels:
        app: pod-reader
    spec:
      serviceAccountName: pod-reader-sa  # Specify the service account
      containers:
      - name: pod-reader
        image: bitnami/kubectl:latest
        resources: {}
        command:
        - "sh"
        - "-c"
        - |
          while true; do
            echo "Listing pods in namespace..."
            kubectl get pods
            echo "Trying to read allowed ConfigMap..."
            kubectl get configmap app-config
            echo "Trying to read unauthorized ConfigMap..."
            kubectl get configmap test-config || echo "Access denied to test-config as expected"
            sleep 30
          done

### Some use case for SA permission
#   - (CI/CD) pipelines often need to deploy or update applications within the cluster.
#   - Monitoring and logging tools may require access to cluster resources to collect metrics and logs.
#   - External services may need to interact with the cluster to perform specific tasks, such as scaling or load balancing.
#   - Security tools may need to scan the cluster for vulnerabilities or misconfigurations.
#   - Backup and restore processes may require access to persistent storage volumes.
#   - In microservices architectures, services may need to discover and communicate with each other.
#   - Custom controllers or operators running within the cluster often need to watch and manage custom resources.
