1.kubernetes/34.nfs.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pd
spec:
  containers:
  - image: registry.k8s.io/test-webserver
    name: test-container
    resources: {}
    volumeMounts:
    - mountPath: /my-nfs-data-path
      name: test-volume
  volumes:
  - name: test-volume
    nfs:
      server: my-nfs-server.example.com
      path: /my-nfs-volume
      readOnly: true


# each time you need a new volume, you need to ask for it from the nfs admin separately.
