1.kubernetes/35.pv.yaml
# Pod to use the example PVC
apiVersion: v1
kind: Pod
metadata:
  name: pvc-pod
spec:
  containers:
  - name: pvc-container
    image: nginx
    resources: {}
    volumeMounts:
    - mountPath: /usr/share/nginx/html
      name: pvc-storage
  volumes:
  - name: pvc-storage
    persistentVolumeClaim:
      claimName: example-pvc


# Each time you need a new volume, you need to ask for it from the storage admin.
# The admin will create a PV and then you can create a PVC to bind to the PV.
# Then you use that PVC in you pod volumes.
